ログオブジェクトを修正した